--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,7 @@ dependencies = [
     "numpy>=2.2.6",
     "pandas>=2.3.1",
     "rioxarray>=0.19.0",
+    "scikit-image>=0.25.2",
+    "scipy>=1.16.1",
     "xarray[complete]>=2025.7.1",
 ]
